modal.css
:root {
  --font-default: "DM Sans", Arial, Helvetica, sans-serif;
  --font-slab: var(--font-default);
  --modal-duration: 0.8s;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
/* Landing Page */

html {
  font-size: 16px;
  max-width: 1500px;
  margin: 0 auto;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  font-family: var(--font-default);
  font-size: 1rem; 
  max-width: 1300px;
  margin: 0 auto;
}

header {
  position: fixed;
  top: 0;
  height: 100px;
  width: 100%;
  z-index: 99;
  margin-bottom: 1rem;
  max-width: 1300px;
  background-color: white;
  padding: 1rem;
}

p {
  margin-bottom: 0;
  padding: 0.5vw;
}

img {
  padding-right: 1rem;
}

.topnav {
  overflow: hidden;
  margin: 20px 20px;
}
.header-logo {
  float: left;
  width: 200px;
  position: absolute;
  left: 2.5em;
  z-index: 999;
}
.main-navbar {
  float: right;
  max-width: 800px;
}

.topnav img {
  width: 100%;
  vertical-align: center;
  margin: 5px;
}

.topnav a {
  float: left;
  display: block;
  color: #000000;
  text-align: center;
  padding: 10px 12px;
  margin: 5px;
  text-decoration: none;
  font-size: 1rem;
  font-family: Roboto, sans-serif;
}

.topnav a:hover {
  background-color: #ff0000;
  color: #ffffff;
  border-radius: 15px;
}

.topnav a.active {
  background-color: #ff0000;
  color: #ffffff;
  border-radius: 15px;
}

.topnav .icon {
  display: none;
}

main {
  font-weight: bolder;
  color: black;
  padding-top: 2vh;
  padding-left: 2vw;
  padding-right: 2vw;
  margin: 1px 20px 15px;
  margin-top: 100px;
  border-radius: 2rem;
  text-align: justify;
}

.modal-btn {
  font-size: 145%;
  background: #fe142f;
  display: flex;
  margin: auto;
  padding: 2em;
  color: #fff;
  padding: 0.75rem 2.5rem;
  border-radius: 1rem;
  cursor: pointer;
}

.modal-btn:hover {
  background: #3876ac;
}

.footer {
  margin: 20px;
  padding: 10px;
  font-family: var(--font-slab);
}

/* Modal form */

.button {
  background: #fe142f;
  margin-top: 0.5em;
  padding: 1em;
  color: #fff;
  border-radius: 15px;
  cursor: pointer;
  font-size: 1rem;
}

.button:hover {
  background: #3876ac;
}

.smFont {
  /* font-size: 16px; */
}

.bground {
  display: none;
  position: fixed;
  z-index: 99;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  overflow: auto;
  background-color: rgba(26, 39, 156, 0.4);
}

.content {
  margin: 5% auto;
  width: 100%;
  max-width: 600px;
  animation-name: modalopen;
  animation-duration: var(--modal-duration);
  background: #232323;
  border-radius: 10px;
  overflow: hidden;
  position: relative;
  top: 50px;
  color: #fff;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.modal-body {
  padding: 15px 8%;
  margin: 15px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  min-height: 50vmin;
  width: 100%;
}

.modal-form {
  width: 100%;
}

label {
  font-family: var(--font-default);
  /* font-size: 17px; */
  font-weight: normal;
  display: inline-block;
  margin: 11px 0;
}

input {
  padding: 8px;
  border: 0.8px solid #ccc;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.text-control {
  margin: 0;
  padding: 8px;
  width: 100%;
  border-radius: 8px;
  /* font-size: 20px; */
  height: 48px;
}

.formData--location {
  display:flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin-bottom: 8px;
}

.formData[data-error]::after {
  content: attr(data-error);
  font-size: 0.8rem;
  color: #e54858;
  display: block;
  margin-top: 7px;
  margin-bottom: 7px;
  text-align: left;
  line-height: 0em;
  opacity: 0;
  transition: 0.3s;
}

.formData[data-error-visible="true"]::after {
  opacity: 1;
  line-height: 1.5rem;
  font-weight: 100;
}

.formData[data-error-visible="true"] .text-control {
  border: 2px solid #e54858;
}
/* 
input[data-error]::after {
    content: attr(data-error);
    font-size: 0.4em;
    color: red;
} */
.checkbox-label,
.checkbox2-label {
  position: relative;
  margin-left: 36px;
  font-size: 12px;
  font-weight: normal;
  min-width: 60px;
}

.checkbox-label .checkbox-icon,
.checkbox2-label .checkbox-icon {
  display: block;
  width: 20px;
  height: 20px;
  border: 2px solid #279e7a;
  border-radius: 50%;
  text-indent: 29px;
  white-space: nowrap;
  position: absolute;
  left: -30px;
  top: -1px;
  transition: 0.3s;
}

.checkbox-label .checkbox-icon::after,
.checkbox2-label .checkbox-icon::after {
  content: "";
  width: 13px;
  height: 13px;
  background-color: #279e7a;
  border-radius: 50%;
  text-indent: 29px;
  white-space: nowrap;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: 0.3s;
  opacity: 0;
}

.checkbox-input {
  display: none;
}

.checkbox-input:checked + .checkbox-label .checkbox-icon::after,
.checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
  opacity: 1;
}

.checkbox-input:checked + .checkbox2-label .checkbox-icon {
  background: #279e7a;
}

.checkbox2-label .checkbox-icon {
  border-radius: 4px;
  border: 0;
  background: #c4c4c4;
}

.checkbox2-label .checkbox-icon::after {
  width: 7px;
  height: 4px;
  border-radius: 2px;
  background: transparent;
  border: 2px solid transparent;
  border-bottom-color: #fff;
  border-left-color: #fff;
  transform: rotate(-55deg);
  left: 21%;
  top: 19%;
}

.close {
  position: absolute;
  right: 15px;
  top: 15px;
  width: 32px;
  height: 32px;
  opacity: 1;
  cursor: pointer;
  transform: scale(0.7);
}

.close:before,
.close:after {
  position: absolute;
  left: 15px;
  content: " ";
  height: 33px;
  width: 3px;
  background-color: #fff;
}

.close:before {
  transform: rotate(45deg);
}

.close:after {
  transform: rotate(-45deg);
}

.btn-submit,
.btn-signup,
.btn-close-confirm  {
  background: #fe142f;
  display: block;
  margin: 30px auto;
  border-radius: 7px;
  font-size: 1.2rem;
  padding: 8px 40px;
  color: #fff;
  cursor: pointer;
  border: 0;
}

.btn-close-confirm {
  bottom: 0;
  position: absolute;
  left: 0;
  right: 0;
}

.modal-confirm-message {
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin: 10px 0;
  height: 90%;
  font-size: 1.8vmax;
}

.modal-confirm-message span {
  margin: 50px 0;
}

.modal-confirm-message br {
  display: block;
  margin: 10px 0;
  line-height: 2rem;
  content: "";
}

/* custom select styles */
.custom-select {
  position: relative;
  font-family: Arial;
  /* font-size: 1.1rem; */
  font-weight: normal;
}

.custom-select select {
  display: none;
}

.select-selected {
  background-color: #fff;
}

/* Style the arrow inside the select element: */
.select-selected:after {
  position: absolute;
  content: "";
  top: 10px;
  right: 13px;
  width: 11px;
  height: 11px;
  border: 3px solid transparent;
  border-bottom-color: #f00;
  border-left-color: #f00;
  transform: rotate(-48deg);
  border-radius: 5px 0 5px 0;
}

/* Point the arrow upwards when the select box is open (active): */
.select-selected.select-arrow-active:after {
  transform: rotate(135deg);
  top: 13px;
}

.select-items div,
.select-selected {
  color: #000;
  padding: 11px 16px;
  border: 1px solid transparent;
  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
  cursor: pointer;
  border-radius: 8px;
  height: 48px;
}

/* Style items (options): */
.select-items {
  position: absolute;
  background-color: #fff;
  top: 89%;
  left: 0;
  right: 0;
  z-index: 99;
}

/* Hide the items when the select box is closed: */
.select-hide {
  display: none;
}

.select-items div:hover,
.same-as-selected {
  background-color: rgba(0, 0, 0, 0.1);
}
/* custom select end */
.text-label {
  font-weight: normal;
  margin: 11px 0;
}

.hero-section {
  min-height: 50vh;
  border-radius: 10px;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  overflow: hidden;
  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
}

.hero-content {
  padding: 50px 52px;
  grid-column: span 4;
  background: #232323;
  color: #fff;
  position: relative;
  text-align: left;
  min-width: 40%;
}

.hero-content::after {
  content: "";
  width: 100%;
  height: 100%;
  background: #232323;
  position: absolute;
  right: -80px;
  top: 0;
}

.hero-content > * {
  position: relative;
  z-index: 1;
}

.hero-headline {
  font-size: 4.5rem;
  font-weight: normal;
  white-space: nowrap;
}

.hero-text {
  width: 146%;
  font-weight: normal;
  font-size: 1.4rem;
  margin-top: 57px;
  padding: 0;
}

.btn-signup {
  outline: none;
  text-transform: capitalize;
  padding: 15px 23px;
  margin: 0;
  margin-top: 59px;
}

.hero-img {
  grid-column: span 8;
}

.hero-img img {
  width: 100%;
  height: 100%;
  display: block;
  padding: 0;
}

.copyrights {
  color: #fe142f;
  padding: 0;
  font-size: 1rem;
  margin: 60px 0 30px;
  font-weight: bolder;
}

.hero-section > .btn-signup {
  display: none;
}

footer {
  padding-left: 2vw;
  padding-right: 2vw;
  margin: 0 20px;
}

@media screen and (max-width: 850px) {
  
  .header-logo {
    width: 30vw;
  }
  .hero-section {
    display: block;
    box-shadow: unset;
    min-height: 70vh;
  }

  .content {
    min-height: 87%;
  }

  .formData {
    text-align: initial;
  }

  .hero-content {
    background: #fff;
    color: #000;
    padding: 0;
    min-width: inherit;
  }

  .hero-content::after {
    content: unset;
  }

  .hero-content .btn-signup {
    display: none;
  }

  .hero-headline {
    font-size: 9.5vw;
    white-space: normal;
  }

  .hero-text {
    width: unset;
    font-size: 3.2vw;
    margin-top: 20px;
  }
  .hero-img img {
    border-radius: 10px;
    margin-top: 20px;
  }

  .main-navbar {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    background-color: white;
    min-width: 100%;
    z-index: 99;
  }

  .topnav {
    margin: 10px 0;
    flex-wrap: nowrap;
    display: flex;
  }

  .topnav a {
    display: none;
  }

  .topnav a.icon {
    display: block;
    color: red;
    font-size: 6vw;
    padding: 0 1rem;
  }

  .topnav a.icon:hover {
    background-color: transparent;
  }

  .topnav.responsive {
    border-bottom: 3px solid red;
    box-shadow: 10px 110px 0px white;
  }

  .topnav.responsive .icon {
    align-self: flex-end;
    order: -2;
    font-size: 6vw;
  }

  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
    font-size: 4vw;
  }

  .topnav.responsive .main-navbar {
    min-width: 100%;
  }
  .modal-body {
    padding: 1vw 5vw;
    margin: 15px 1vw;
  }
  .text-control {
    max-width: 88vw;
  }

  .hero-section > .btn-signup {
    display: block;
    margin: 15px auto 10px;
    padding: 10px 35px;
  }

  .modal-confirm-message {
    font-size: 3vmax;
  }

  .copyrights {
    margin: 10px 0;
    text-align: center;
  }
}

@media screen and (max-width: 500px) {
  html {
    font-size: 12px;
  }

  header {
    height: 50px;
  }

  main {
    margin: 50px 20px 0px;
  }
}

@keyframes modalopen {
  from {
    opacity: 0;
    transform: translateY(-150px);
  }
  to {
    opacity: 1;
  }
}

